[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vultr-dns-mcp"
version = "1.0.2"
description = "A comprehensive Model Context Protocol (MCP) server for managing Vultr DNS records"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ryan Malloy", email = "ryan@supported.systems"}
]
maintainers = [
    {name = "Ryan Malloy", email = "ryan@supported.systems"}
]
keywords = [
    "vultr", 
    "dns", 
    "mcp", 
    "model-context-protocol", 
    "dns-management", 
    "api", 
    "mcp-server"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications",
    "Environment :: Console",
    "Framework :: AsyncIO"
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "click>=8.0.0"
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0"
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/rsp2k/vultr-dns-mcp"
Documentation = "https://vultr-dns-mcp.readthedocs.io/"
Repository = "https://github.com/rsp2k/vultr-dns-mcp.git"
"Bug Tracker" = "https://github.com/rsp2k/vultr-dns-mcp/issues"
Changelog = "https://github.com/rsp2k/vultr-dns-mcp/blob/main/CHANGELOG.md"

[project.scripts]
vultr-dns-mcp = "vultr_dns_mcp.cli:main"
vultr-dns-server = "vultr_dns_mcp.cli:server_command"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vultr_dns_mcp = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["vultr_dns_mcp"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["mcp.*"]
ignore_missing_imports = true